--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,6 @@
+
 {
   "version": 2,
-  "builds": [
-    { "src": "/Live.py", "use": "@vercel/python" }
-  ],
-  "routes": [
-    { "src": "/(.*)", "dest": "/Live.py" }
-  ]
+  "builds": [{ "src": "package.json", "use": "@vercel/static-build" }],
+  "routes": [{ "src": "/(.*)", "dest": "/index.html" }]
 }
