--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
-    "lucide-react": "^0.260.0",
     "next": "13.4.4",
-    "papaparse": "^5.4.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "lucide-react": "^0.260.0",
+    "papaparse": "^5.4.1"
   }
 }
