--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "papaparse": "^5.4.1",
-    "lucide-react": "^0.260.0"
+    "react-scripts": "5.0.1",
+    "lucide-react": "^0.260.0",
+    "papaparse": "^5.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
